[gd_scene load_steps=25 format=3 uid="uid://dygn2bse4fvps"]

[ext_resource type="Script" path="res://BaseData/Scripts/CardisHUB.gd" id="1_jqlqs"]
[ext_resource type="PackedScene" uid="uid://dlbm17bymbnjn" path="res://BaseData/3D/Cardis/Cardis.glb" id="2_mctuh"]
[ext_resource type="PackedScene" uid="uid://167k67es3go7" path="res://BaseData/3D/CardisExtra/3DMap.glb" id="3_xjgi3"]
[ext_resource type="PackedScene" uid="uid://bgdgqtnw0irwx" path="res://BaseData/3D/CardisExtra/centerObject.glb" id="4_u3iad"]
[ext_resource type="PackedScene" uid="uid://cxfwpju4isevq" path="res://BaseData/3D/CardisExtra/energyDC.glb" id="5_ymjkt"]
[ext_resource type="PackedScene" uid="uid://bwmk5y3y57hai" path="res://BaseData/3D/CardisExtra/fusionCheck.glb" id="6_ihuba"]
[ext_resource type="PackedScene" uid="uid://gpf735edx4f1" path="res://BaseData/3D/CardisExtra/fusionReady.glb" id="7_7jdyr"]
[ext_resource type="PackedScene" uid="uid://bli2v7av5784a" path="res://BaseData/3D/CardisExtra/fusion_rotate.glb" id="8_o0wgt"]
[ext_resource type="PackedScene" uid="uid://b22gjouth22t1" path="res://BaseData/3D/CardisExtra/portalLoading.glb" id="9_ru6yd"]
[ext_resource type="PackedScene" uid="uid://urseykv0ord2" path="res://BaseData/3D/CardisExtra/portal_door.glb" id="10_snn2h"]
[ext_resource type="PackedScene" uid="uid://b4inptl5kjt4o" path="res://BaseData/3D/CardisExtra/settingsObject.glb" id="11_0bwr5"]
[ext_resource type="PackedScene" uid="uid://13hyuesmqvad" path="res://BaseData/3D/CardisExtra/startEngineObject.glb" id="12_s6kp3"]
[ext_resource type="PackedScene" uid="uid://c5gmvarioms50" path="res://BaseData/FPS/FPS.tscn" id="14_mctuh"]
[ext_resource type="AudioStream" uid="uid://brwqo4ms71k0i" path="res://BaseData/Sound/InSoundW13.ogg" id="15_xjgi3"]
[ext_resource type="Script" path="res://BaseData/Scripts/talk_area.gd" id="16_ihuba"]
[ext_resource type="PackedScene" uid="uid://gbht0cncocdt" path="res://BaseData/3D/CardisExtra/Cardis_portable.glb" id="16_u3iad"]
[ext_resource type="PackedScene" uid="uid://0i060g1ou8k2" path="res://BaseData/Life/SecondOne.tscn" id="16_ymjkt"]
[ext_resource type="FontFile" uid="uid://bqmglpkfyr1mm" path="res://BaseData/Font/FreeSans.ttf" id="18_ihuba"]
[ext_resource type="PackedScene" uid="uid://cad2dv5kvx2jn" path="res://BaseData/NPC/fatih.tscn" id="19_7jdyr"]

[sub_resource type="Animation" id="Animation_aaum0"]
resource_name = "loop"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.998, 3.996),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.232855, 0), Vector3(0, 0.516255, 0), Vector3(0, 0.232855, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jm1jn"]
_data = {
"loop": SubResource("Animation_aaum0")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ihuba"]
size = Vector3(1.18933, 2.34875, 0.492996)

[sub_resource type="Environment" id="Environment_x3jm3"]
background_mode = 1
background_energy_multiplier = 0.2
ambient_light_source = 3
tonemap_mode = 3
ssil_enabled = true
glow_enabled = true
glow_intensity = 4.3
glow_strength = 0.45
glow_bloom = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ymjkt"]
size = Vector3(1.05225, 1.98352, 2.43884)

[node name="CardisHUB" type="Node3D"]
script = ExtResource("1_jqlqs")

[node name="Cardis" parent="." instance=ExtResource("2_mctuh")]

[node name="3DMap" parent="Cardis" instance=ExtResource("3_xjgi3")]

[node name="centerObject" parent="Cardis" instance=ExtResource("4_u3iad")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.438521, 0)

[node name="CenterAnim" type="AnimationPlayer" parent="Cardis/centerObject"]
libraries = {
"": SubResource("AnimationLibrary_jm1jn")
}

[node name="energyDC" parent="Cardis" instance=ExtResource("5_ymjkt")]
transform = Transform3D(1.44129, 0, -1.44129, 0, 2.03829, 0, 1.44129, 0, 1.44129, 0.839125, 1.46646, 0.772869)

[node name="fusionCheck" type="Node3D" parent="Cardis"]

[node name="f0" parent="Cardis/fusionCheck" instance=ExtResource("6_ihuba")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.81752, 1.08019, 0.0585859)

[node name="f1" parent="Cardis/fusionCheck" instance=ExtResource("6_ihuba")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.81752, 1.08019, -0.0199326)

[node name="f2" parent="Cardis/fusionCheck" instance=ExtResource("6_ihuba")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.81752, 1.08019, -0.0996959)

[node name="fusionReady" parent="Cardis" instance=ExtResource("7_7jdyr")]
transform = Transform3D(1.66205, 0, 0, 0, 1.66205, 0, 0, 0, 1.66205, -1.42027, 1.03626, -0.0538128)

[node name="FusionRotate" type="Node3D" parent="Cardis"]

[node name="fr0" parent="Cardis/FusionRotate" instance=ExtResource("8_o0wgt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.32555, 1.35317, -0.0787146)

[node name="fr1" parent="Cardis/FusionRotate" instance=ExtResource("8_o0wgt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35757, 1.35317, -0.0971928)

[node name="fr2" parent="Cardis/FusionRotate" instance=ExtResource("8_o0wgt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.28348, 1.35317, -0.059865)

[node name="portalLoading2" parent="Cardis" instance=ExtResource("9_ru6yd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.7675, 0.0709222, 0.00320208)

[node name="portal_door" parent="Cardis" instance=ExtResource("10_snn2h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.31021, 0.138851, -0.030243)

[node name="StaticBody3D" type="StaticBody3D" parent="Cardis/portal_door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cardis/portal_door/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0946655, 0.674377, -1.17924)
shape = SubResource("BoxShape3D_ihuba")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Cardis/portal_door/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0946655, 0.674377, 1.15394)
shape = SubResource("BoxShape3D_ihuba")

[node name="settings" type="Node3D" parent="Cardis"]

[node name="s0" parent="Cardis/settings" instance=ExtResource("11_0bwr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.486907, 0.995827, 1.43926)

[node name="s1" parent="Cardis/settings" instance=ExtResource("11_0bwr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.446195, 1.04306, 1.31939)

[node name="s2" parent="Cardis/settings" instance=ExtResource("11_0bwr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.397006, 1.09206, 1.207)

[node name="s3" parent="Cardis/settings" instance=ExtResource("11_0bwr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.355997, 1.1452, 1.09507)

[node name="s4" parent="Cardis/settings" instance=ExtResource("11_0bwr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.32097, 1.19863, 0.977817)

[node name="s5" parent="Cardis/settings" instance=ExtResource("11_0bwr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.262054, 1.24714, 0.870571)

[node name="s6" parent="Cardis/settings" instance=ExtResource("11_0bwr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20964, 1.29941, 0.752464)

[node name="startEngineObject" parent="Cardis" instance=ExtResource("12_s6kp3")]
transform = Transform3D(1, 0, 0, 0, 0.549402, 0.835558, 0, -0.835558, 0.549402, -0.0364495, 0.823354, -2.01734)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_x3jm3")

[node name="light" type="Node3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.8248, 0)
omni_range = 14.0714

[node name="OmniLight3D2" type="OmniLight3D" parent="light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85244, -5.61444)
omni_range = 14.0714

[node name="OmniLight3D3" type="OmniLight3D" parent="light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85244, 5.11569)
omni_range = 14.0714

[node name="InsideSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("15_xjgi3")
bus = &"Atmosphere"

[node name="FPS" parent="." instance=ExtResource("14_mctuh")]
transform = Transform3D(-5.96046e-08, 0, 1, 0, 1, 0, -1, 0, -5.96046e-08, 8.08455, 1.09811, 0.0383753)

[node name="Cardis_portable" parent="." instance=ExtResource("16_u3iad")]
transform = Transform3D(-1.08112, 0, -8.74228e-08, 0, 1.05838, 0, 9.45147e-08, 0, -1, -0.000824869, -0.31965, -10.2988)

[node name="talkArea" type="Node3D" parent="."]
script = ExtResource("16_ihuba")

[node name="firstONE" parent="talkArea" instance=ExtResource("16_ymjkt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.79205, 0.942861, -0.0279791)

[node name="talkFirstOne" type="AudioStreamPlayer3D" parent="talkArea/firstONE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.285286, 1.06269, 0)
volume_db = 30.0
bus = &"Voice"

[node name="exitArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.63885, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="exitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.026123, 0.49176, -0.0271606)
shape = SubResource("BoxShape3D_ymjkt")

[node name="ui" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="strtext" type="Label" parent="ui"]
layout_mode = 0
offset_left = 24.0
offset_top = 724.0
offset_right = 899.0
offset_bottom = 883.0
theme_override_fonts/font = ExtResource("18_ihuba")
theme_override_font_sizes/font_size = 51

[node name="Fatih" parent="." instance=ExtResource("19_7jdyr")]
transform = Transform3D(0.992747, 0, -0.120224, 0, 1, 0, 0.120224, 0, 0.992747, -6.89245, 0.944083, 16.6509)

[connection signal="body_entered" from="exitArea" to="." method="_on_exit_area_body_entered"]
